create base template for all page

--- a/team.html
+++ b/team.html
@@ -76,7 +76,7 @@
             <!-- Page Content goes here -->
             <section class="section-header overflow-hidden pt-7 pt-lg-8 pb-9 pb-lg-12">
                 <div class="container">
-                    <h2>page d'accueil</h2>
+                    <h2>page équipe</h2>
                 </div>
             </section>
 
