changing-headers-and-adding-enquete-pro-page

--- a/enquete.html
+++ b/enquete.html
@@ -22,7 +22,15 @@
                 <div class="collapse navbar-collapse" id="navbar_global">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="questionnement.html">Questionnement</a></li>
-                        <li class="nav-item"><a class="nav-link" href="enquete.html">Enquête</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownEnquete" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Enquête
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownEnquete">
+                                <li><a class="dropdown-item" href="enquete.html">Enquête</a></li>
+                                <li><a class="dropdown-item" href="enquetepro.html">Enquête Professionnelle</a></li>
+                            </ul>
+                        </li> 
                         <li class="nav-item"><a class="nav-link" href="analyse.html">Analyse</a></li>
                         <li class="nav-item"><a class="nav-link" href="synthese.html">Synthèse</a></li>
                         <li class="nav-item"><a class="nav-link" href="team.html">Notre Équipe</a></li>
