--- a/enquetepro.html
+++ b/enquetepro.html
@@ -45,7 +45,6 @@
                             <li class="nav-item"><a class="nav-link" href="synthese.html">Synthèse</a></li>
                             <li class="nav-item"><a class="nav-link" href="team.html">Notre Équipe</a></li>
                             <li class="nav-item"><a class="nav-link" href="sources.html">Sources</a></li>
-
                         </ul>
                     </div>
                 </div>
@@ -55,7 +54,7 @@
             <!-- Page Content goes here -->
             <section class="section-header overflow-hidden pt-7 pt-lg-8 pb-9 pb-lg-12">
                 <div class="container">
-                    <h2>page d'accueil</h2>
+                    <h2>page enquete pro</h2>
                 </div>
             </section>
 
