--- a/analyse.html
+++ b/analyse.html
@@ -175,8 +175,7 @@
 
 
     <footer class="fixed-bottom align-items-center">
-        <i>Ce projet est réalisé dans le cadre du cours "Question Éthique en IA et NTIC" de l'Université Polytechnique
-            de Mons</i>
+        <i>Ce projet est réalisé dans le cadre du cours "Question Éthique en IA et NTIC" de l'Université Polytechnique de Mons</i>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
