--- a/enquete.html
+++ b/enquete.html
@@ -98,8 +98,8 @@
         </section>
     </main>
 
-    <footer class="text-center bg-light py-3 mt-4 border-top">
-        <small><i>Ce projet est réalisé dans le cadre du cours "Question Éthique en IA et NTIC" de l'Université Polytechnique de Mons</i></small>
+    <footer class="fixed-bottom align-items-center">
+        <i>Ce projet est réalisé dans le cadre du cours "Question Éthique en IA et NTIC" de l'Université Polytechnique de Mons</i>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
