add base for page team + todo page synthese

--- a/synthese.html
+++ b/synthese.html
@@ -55,6 +55,10 @@
             <section class="section-header overflow-hidden pt-7 pt-lg-8 pb-9 pb-lg-12">
                 <div class="container">
                     <h2>page synthese</h2>
+                    <br><h4>TODO:</h4>
+                    - synthèse de toutes les éthiques de la partie analyse<br>
+                    - conclusion de l'Enquête<br>
+                    - Conclusion général + recommendation<br>
                 </div>
             </section>
 
