--- a/team.html
+++ b/team.html
@@ -54,7 +54,39 @@
             <!-- Page Content goes here -->
             <section class="section-header overflow-hidden pt-7 pt-lg-8 pb-9 pb-lg-12">
                 <div class="container">
-                    <h2>page équipe</h2>
+                    <h2>Notre équipe</h2>
+                    <div class="row justify-content-center align-items-center g-2">
+                        <div class="col-sm-6 col-lg-3">
+                            <div class="card text-start">
+                                <img class="card-img" src="images/bongiovanni.png" alt="picture" />
+                                <div class="card-body">
+                                    <h4 class="card-title">Arthur Bongiovanni</h4>
+                                    <p class="card-text">avis</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-3"><div class="card text-start">
+                            <img class="card-img" src="images/#" alt="picture" />
+                            <div class="card-body">
+                                <h4 class="card-title">Noah Mine</h4>
+                                <p class="card-text">avis</p>
+                            </div>
+                        </div></div>
+                        <div class="col-sm-6 col-lg-3"><div class="card text-start">
+                            <img class="card-img" src="images/#" alt="picture" />
+                            <div class="card-body">
+                                <h4 class="card-title">Paul Toussaint</h4>
+                                <p class="card-text">avis</p>
+                            </div>
+                        </div></div>
+                        <div class="col-sm-6 col-lg-3"><div class="card text-start">
+                            <img class="card-img" src="images/#" alt="picture" />
+                            <div class="card-body">
+                                <h4 class="card-title">Simon Moutier</h4>
+                                <p class="card-text">avis</p>
+                            </div>
+                        </div></div>
+                    </div>
                 </div>
             </section>
 
