update visual pour partie analyse

--- a/analyse.html
+++ b/analyse.html
@@ -26,14 +26,15 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="questionnement.html">Questionnement</a></li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownEnquete" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownEnquete" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
                                 Enquête
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownEnquete">
                                 <li><a class="dropdown-item" href="enquete.html">Enquête</a></li>
                                 <li><a class="dropdown-item" href="enquetepro.html">Enquête Professionnelle</a></li>
                             </ul>
-                        </li>                        
+                        </li>
                         <li class="nav-item"><a class="nav-link" href="analyse.html">Analyse</a></li>
                         <li class="nav-item"><a class="nav-link" href="synthese.html">Synthèse</a></li>
                         <li class="nav-item"><a class="nav-link" href="team.html">Notre Équipe</a></li>
@@ -52,7 +53,7 @@
                     <div class="carousel-item active">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">Conséquentialisme</h5>
+                                <h4 class="card-title">Conséquentialisme</h4>
                                 <p class="card-text">Le conséquentialisme</p>
                             </div>
                         </div>
@@ -61,51 +62,52 @@
                     <div class="carousel-item">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">Responsabilité</h5>
-                                <p class="card-text">L’éthique de la responsabilité, telle que formulée par Hans Jonas,
+                                <img src="images/hans-jonas.jpg" class="card-img-top kant-img" alt="Image Responsabilité">
+                                <h4 class="card-title">Responsabilité</h4>
+                                <p class="card-text">
+                                <p>L’éthique de la responsabilité, telle que formulée par Hans Jonas,
                                     insiste sur la nécessité de prendre en compte les conséquences de nos actions,
                                     notamment lorsqu’elles peuvent avoir un impact négatif sur autrui. Appliquée aux
                                     logiciels à forts privilèges, comme les antivirus ou certains outils
                                     d’administration système, cette approche soulève des questions essentielles quant à
                                     la protection des données privées des utilisateurs et à la responsabilité des
-                                    éditeurs de ces logiciels.
-                                    <br>
-                                    <i>1. Responsabilité des éditeurs de logiciels</i>
-                                    <br>
+                                    éditeurs de ces logiciels.</p>
+                                <b>1. Responsabilité des éditeurs de logiciels</b>
+                                <p>
                                     Les entreprises développant des logiciels ayant un accès privilégié au système
                                     doivent anticiper et prévenir les risques liés à la collecte, au stockage et à
                                     l’exploitation des données personnelles. Ces logiciels ont souvent la capacité de
                                     scanner l’ensemble des fichiers, de surveiller les connexions réseau et, parfois,
                                     d’envoyer des informations vers des serveurs distants. Une approche responsable
                                     implique de :
-
+                                    <br>
                                     Minimiser la collecte de données au strict nécessaire, en évitant tout accès
                                     superflu aux fichiers et aux activités des utilisateurs.
-
+                                    <br>
                                     Informer de manière transparente les utilisateurs sur les données collectées, leur
                                     finalité et les éventuelles transmissions à des tiers.
-
+                                    <br>
                                     Mettre en place des mesures de sécurité robustes pour éviter les fuites de données
                                     et les abus internes.
-                                    <br>
-                                    <i>2. L’impact sur la vie privée des utilisateurs</i>
-                                    <br>
+                                </p>
+                                <b>2. L’impact sur la vie privée des utilisateurs</b>
+                                <p>
                                     Un logiciel à forts privilèges mal conçu ou mal utilisé peut devenir une menace pour
                                     la vie privée. Dans une perspective de responsabilité, les développeurs et éditeurs
                                     doivent évaluer les risques associés à leur technologie et mettre en œuvre des
                                     garanties adéquates. L’utilisation abusive ou détournée d’un antivirus, par exemple,
                                     pourrait aboutir à :
-
+                                    <br>
                                     Une surveillance excessive et injustifiée de l’utilisateur.
-
+                                    <br>
                                     Une exposition des données privées en cas de compromission du logiciel (exploits,
                                     vulnérabilités).
-
+                                    <br>
                                     Une monétisation abusive des données sous couvert de protection (vente
                                     d’informations à des annonceurs).
-                                    <br>
-                                    <i>3. L’obligation de rendre des comptes</i>
-                                    <br>
+                                </p>
+                                <b>3. L’obligation de rendre des comptes</b>
+                                <p>
                                     L’éthique de la responsabilité impose également une obligation de redevabilité. Les
                                     entreprises doivent être en mesure de justifier leurs choix en matière de collecte
                                     et d’utilisation des données. Cela implique des audits réguliers, des politiques de
@@ -113,15 +115,15 @@
                                     le RGPD. De plus, en cas de fuite de données ou d’exploitation abusive, elles ont la
                                     responsabilité d’informer rapidement les utilisateurs et de prendre des mesures
                                     correctives.
-                                    <br>
-                                    <i>Conclusion</i>
-                                    <br>
+                                <p>
+                                    <b>Conclusion</b>
+                                <p>
                                     L’éthique de la responsabilité exige une prise de conscience des conséquences
                                     potentielles des logiciels à forts privilèges sur la vie privée des utilisateurs.
                                     Elle impose aux éditeurs un devoir de transparence, de minimisation des risques et
                                     de respect des droits fondamentaux. L’objectif est de garantir que ces outils,
                                     conçus pour protéger, ne deviennent pas eux-mêmes des vecteurs de menace pour la
-                                    sécurité et la confidentialité des données personnelles.
+                                    sécurité et la confidentialité des données personnelles.</p>
                                 </p>
                             </div>
                         </div>
@@ -130,7 +132,7 @@
                     <div class="carousel-item">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">Éthique des Vertus</h5>
+                                <h4 class="card-title">Éthique des Vertus</h4>
                                 <p class="card-text">L'éthique des vertus</p>
                             </div>
                         </div>
@@ -140,7 +142,7 @@
                         <div class="card">
                             <img src="images/Kant.jpg" class="card-img-top kant-img" alt="Image Déontologisme">
                             <div class="card-body">
-                                <h5 class="card-title">Déontologisme</h5>
+                                <h4 class="card-title">Déontologisme</h4>
                                 <p class="card-text">D’un point de vue déontologique, la question des antivirus et de
                                     leur accès croissant aux privilèges système pose un problème fondamental. Selon
                                     l’éthique kantienne, une action est morale si elle suit une règle universalisable et
@@ -175,7 +177,8 @@
 
 
     <footer class="fixed-bottom align-items-center">
-        <i>Ce projet est réalisé dans le cadre du cours "Question Éthique en IA et NTIC" de l'Université Polytechnique de Mons</i>
+        <i>Ce projet est réalisé dans le cadre du cours "Question Éthique en IA et NTIC" de l'Université Polytechnique
+            de Mons</i>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
