--- a/team.html
+++ b/team.html
@@ -80,7 +80,7 @@
                             </div>
                         </div></div>
                         <div class="col-sm-6 col-lg-3"><div class="card text-start">
-                            <img class="card-img" src="images/#" alt="picture" />
+                            <img class="card-img" src="images/moutier.jpeg" alt="picture" />
                             <div class="card-body">
                                 <h4 class="card-title">Simon Moutier</h4>
                                 <p class="card-text">avis</p>
